started positioning of virtual layout

--- a/test/index.html
+++ b/test/index.html
@@ -6,22 +6,31 @@
     ':3033"></' + 'script>')
   </script>
   <body>
-    <aside>
+    <nav>
       <ul>
         <li />
         <li />
         <li />
       </ul>
-    </aside>
-    <section>
-      <ul>
-        <li />
-        <li />
-        <li />
-        <li />
-        <li />
-      </ul>
-    </section>
+    </nav>
+    <div>
+      <aside>
+        <ul>
+          <li />
+          <li />
+          <li />
+        </ul>
+      </aside>
+      <section>
+        <ul>
+          <li />
+          <li />
+          <li />
+          <li />
+          <li />
+        </ul>
+      </section>
+    </div>
     <script src="./test/dist/index.inline.js"></script>
   </body>
 </html>
