--- a/test/index.html
+++ b/test/index.html
@@ -31,6 +31,13 @@
         </ul>
       </section>
     </div>
+    <nav>
+      <ul>
+        <li />
+        <li />
+        <li />
+      </ul>
+    </nav>
     <script src="./test/dist/index.inline.js"></script>
   </body>
 </html>
