--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,6 @@
 <html>
   <meta charset="utf-8" />
-  <link href="./test/style.css" rel="stylesheet" type="text/css">
+  <link href="./style.css" rel="stylesheet" type="text/css">
   <script>
     document.write('<script src="http://' + (window.location.host || 'localhost').split(':')[0] +
     ':3033"></' + 'script>')
@@ -38,6 +38,6 @@
         <li />
       </ul>
     </nav>
-    <script src="./test/dist/index.inline.js"></script>
+    <script src="./dist/index.inline.js"></script>
   </body>
 </html>
