--- a/test/index.html
+++ b/test/index.html
@@ -8,9 +8,15 @@
   <body>
     <nav>
       <ul>
-        <li />
-        <li />
-        <li />
+        <li>
+          <input />
+        </li>
+        <li>
+          <input />
+        </li>
+        <li>
+          <input />
+        </li>
       </ul>
     </nav>
     <div>
